--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,18 @@ p{
     text-align: end;
     margin-right: 15%;
 }
+@media (max-width: 1024px){
+    header{
+        background-color:cadetblue
+    }
+}
+@media (max-width: 768px){
+    header{
+        background-color:chocolate
+    }
+}
+@media (max-width: 480px){
+    header{
+        background-color:indianred
+    }
+}
